<resources>

    <!--App Strings -->
    <string name="app_name">Central Tracking Way</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">Track your expenses</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Authentication Strings -->
    <string name="reset_password_failed">Failed to send reset email!</string>
    <string name="instrunctions_reset_password_sent">We have sent you instructions to reset your password!</string>
    <string name="enter_registered_email">Enter your registered email id</string>
    <string name="enter_email">Enter email address!</string>
    <string name="enter_password">Enter password!</string>
    <string name="password_too_short">Password too short, enter minimum 6 characters!</string>
    <string name="user_with_email_created">Account created</string>
    <string name="authentication_failed">Authentication failed.</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in CentralTrackingWay now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">Reset Password</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>

    <!-- Expenses Strings -->
    <string name="expenses">Expenses</string>
    <string name="account_options">Account Options</string>
    <string name="icon">Icon</string>
    <string name="hint_description">Description</string>
    <string name="hint_amount">Amount</string>
    <string name="hint_date">Date (dd/mm/yyyy)</string>
    <string name="title_add_expense">Add a new expense</string>
    <string name="title_edit_expense">Edit an expense</string>
    <string name="delete_expense">Delete expense</string>
    <string name="add_expense">Add expense</string>
    <string name="edit_expense">Edit expense</string>
    <string name="fill_all_the_fields">Please, fill out properly all the required fields</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
