<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- TODO: Set appropriate icons -->
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_expenses"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/expenses"/>
    </group>

    <item android:title="@string/account_options">
        <menu>
            <!-- TODO: Low Priority
            <item
                android:id="@+id/nav_change_email"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/change_email"/>
            <item
                android:id="@+id/nav_change_password"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/change_password"/>
            <item
                android:id="@+id/nav_remove_user"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/remove_user" />
                -->
            <item
                android:id="@+id/nav_sign_out"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/btn_sign_out" />
        </menu>
    </item>

</menu>
