<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.omohamed.centraltrackingway.fragments.ManipulateExpenseFragment">
    <LinearLayout
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_horizontal_margin">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/TextAppearance.AppCompat">

            <EditText
                android:id="@+id/edit_text_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_description"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/TextAppearance.AppCompat">

            <EditText
                android:id="@+id/edit_text_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_amount"
                android:inputType="numberDecimal"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black"  />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:hintTextAppearance="@style/TextAppearance.AppCompat">

            <EditText
                android:id="@+id/edit_text_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_date"
                android:inputType="date"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black"  />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_add_expense"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/colorPrimary"
            android:text="@string/add_expense"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/btn_edit_expense"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/colorPrimary"
            android:text="@string/edit_expense"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/btn_delete_expense"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/errorColor"
            android:text="@string/delete_expense"
            android:textColor="@android:color/black" />

    </LinearLayout>

</FrameLayout>
